--- a/.github/workflows/publish_doc.yml
+++ b/.github/workflows/publish_doc.yml
@@ -8,7 +8,7 @@ on:
 
 # Permisos necesarios para GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
